chore: adds navbar' color variables

--- a/src/styles/themes/default.css
+++ b/src/styles/themes/default.css
@@ -15,6 +15,10 @@
   --color-background: #fff;
   --color-danger: #b71c1c;
 
+  /* Nav */
+  --color-bg-navbar: #03a84e;
+  --color-bg-active-link-navbar: #066a34;
+
   /* fonts */
   --font-family-primary: helvetica neue, helvetica, arial, sans-serif;
   --font-family-secondary: georgia, times new roman, times, serif;
